--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -2,8 +2,12 @@ html, body {
     font-family: -apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Oxygen,Ubuntu,Cantarell,Fira Sans,Droid Sans,Helvetica Neue,sans-serif;
 }
 
+/* JSON Schema Form */
 i.glyphicon { display: none; }
 .btn-add::after { content: 'Add'; }
 .array-item-move-up::after { content: 'Move Up'; }
 .array-item-move-down::after { content: 'Move Down'; }
 .array-item-remove::after { content: 'Remove'; }
+
+/* Code Mirror */
+.CodeMirror { height: 100%; }
