--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -8,7 +8,35 @@ body {
 i.glyphicon {
   display: none;
 }
-.btn-add::after {
+.array-item .col-xs-9, .array-item .col-xs-3 {
+  float: left;
+}
+.array-item .col-xs-3 {
+  margin-left: 10px;
+}
+.btn-group button {
+  border: 1px solid #ccc;
+}
+.array-item-move-up i, .array-item-move-down i, .array-item-remove i, .btn-add i {
+  display: inline-block;
+  font: normal normal normal 14px/1 FontAwesome;
+  font-size: 1.1em;
+  text-rendering: auto;
+  -webkit-font-smoothing: antialiased;
+}
+.array-item-move-up i::before {
+  content: "\F062";
+}
+.array-item-move-down i::before {
+  content: "\F063";
+}
+.array-item-remove i::before {
+  content: "\F00D";
+}
+.btn-add i::before {
+  content: "\F067";
+}
+/* .btn-add::after {
   content: "Add";
 }
 .array-item-move-up::after {
@@ -19,7 +47,7 @@ i.glyphicon {
 }
 .array-item-remove::after {
   content: "Remove";
-}
+} */
 
 /* Code Mirror */
 .CodeMirror {
