--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -1,6 +1,7 @@
 body,
 html {
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  font-size: 12px;
 }
 
 /* JSON Schema Form */
@@ -77,7 +78,7 @@ form .form-group label input[type="checkbox"] {
 .playground {
   height: auto;
   position: fixed;
-  top: 80px;
+  top: 50px;
   left: 15px;
   right: 0;
   bottom: 0;
@@ -103,4 +104,10 @@ form .form-group label input[type="checkbox"] {
 
 .nav-item .btn {
   margin-right: 0.5rem;
+}
+
+.status {
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
